@@ -2293,8 +2293,9 @@
 	"import-interwiki-history": "Copy all history revisions for this page",
 	"import-interwiki-templates": "Include all templates",
 	"import-interwiki-submit": "Import",
-	"import-interwiki-namespace": "Destination namespace:",
-	"import-interwiki-rootpage": "Destination root page (optional):",
+	"import-mapping-default": "Import to default locations",
+	"import-mapping-namespace": "Import to a namespace:",
+	"import-mapping-subpage": "Import as subpages of the following page:",
 	"import-upload-filename": "Filename:",
 	"import-comment": "Comment:",
 	"importtext": "Please export the file from the source wiki using the [[Special:Export|export utility]].\nSave it to your computer and upload it here.",
